[build-system]
build-backend = "uv_build"
requires = ["uv_build"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.14.4",
    "types-pyyaml>=6.0.12.20250915",
    "types-ujson>=5.10.0.20250822",
    "uv-build",
]

[project]
authors = [{name = "Steve Jibson", email = "steve@jibson.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Monitoring",
]
description = "Run local Nagios-compatible checks; push results to Uptime Kuma"
dependencies = [
    "apscheduler>=3.11.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "structlog>=25.5.0",
]
keywords = ["nagios", "Uptime Kuma"]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
name = "kumacub"
readme = "README.md"
requires-python = ">=3.11"
version = "0.6.0"

[project.scripts]
kumacub = "kumacub.entrypoints.cli:main"

[project.urls]
Homepage = "https://github.com/toadstule/kumacub"
Documentation = "https://github.com/toadstule/kumacub/blob/main/README.md"
Issues = "https://github.com/toadstule/kumacub/issues"
Repository = "https://github.com/toadstule/kumacub.git"

[tool.mypy]
ignore_missing_imports = true
implicit_reexport = true
install_types = true
non_interactive = true
pretty = true
strict = true

[tool.ruff]
line-length = 120  # Mainly due to the additional length caused by type hinting.

[tool.ruff.lint]
ignore = [
    "COM812",  # This gets upset when there isn't a trailing comma in a multi-line split string.
               # The formatter will add/verify the trailing commas.
    "T201",    # This check prevents the use of print() -- which would be fine for non-interactive programs.
]
select = [
    "ALL",   # All the checks.
    "D401",  # Use imparative mood for comments. The "google" pydocstyle convention disables this, so we'll re-enable it.
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "S101",    # Allow tests to use assert statements.
    "SLF001",  # Allow tests to access private members.
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
source = ["kumacub"]
omit = [
    "*/kumacub/entrypoints/*",
]

[tool.coverage.report]
show_missing = true
